--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "chart.js": "^3.5.1",
+    "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.1.1",
+    "react-content-loader": "^6.1.0",
     "react-data-table-component": "^7.4.4",
     "react-dom": "^17.0.2",
     "react-intl": "^5.21.0",
