--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "chart.js": "^3.5.1",
+    "date-fns": "^2.27.0",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
-    "react-chartjs-2": "^3.1.1",
+    "react-chartjs-2": "3.2.0",
     "react-content-loader": "^6.1.0",
     "react-data-table-component": "^7.4.4",
     "react-dom": "^17.0.2",
